maze.lessons.maze.island.IslandMaze.scala.error
Escaper:21: error: type NORTH is not a member of object plm.universe.Direction
		else if(!estFaceMur() && getDirection():Direction.NORTH)
                                                                  ^Escaper:21: error: type mismatch;
 found   : plm.universe.Direction
 required: Boolean
		else if(!estFaceMur() && getDirection():Direction.NORTH)
                                                     ^